[package]
name = "bike_gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
# egui_extras = " { version = "0.22.0", features = ["image"] }"
egui_file = "0.9"
btleplug = "0.11.0"
tokio = {version = "1.28", features = ["full"] }
uuid = "1.3.4"
lazy_static = "1.4.0"
async-std = "1.12.0"
